--- a/src/main/resources/Views/Landing.fxml
+++ b/src/main/resources/Views/Landing.fxml
@@ -2,26 +2,38 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="800.0" prefWidth="1176.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UILayer.Controllers.LandingController">
-    <children>
-        <BorderPane prefHeight="800.0" prefWidth="1176.0" style="-fx-background-color: #bbe0e0;">
-            <top>
-                <AnchorPane prefHeight="76.0" prefWidth="1200.0" style="-fx-background-color: black;" BorderPane.alignment="CENTER">
+<GridPane stylesheets="@Landing.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UILayer.Controllers.LandingController">
+   <columnConstraints>
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+   </rowConstraints>
+   <children>
+        <BorderPane prefHeight="800.0" prefWidth="1176.0" style="-fx-background-color: #bbe0e0;" GridPane.hgrow="ALWAYS">
+         <top>
+                <AnchorPane prefHeight="87.0" prefWidth="1182.0" style="-fx-background-color: #160604;" BorderPane.alignment="CENTER">
                     <children>
-                        <JFXButton layoutX="623.0" layoutY="19.0" onAction="#goToPlayers" prefHeight="32.0" prefWidth="120.0" styleClass="d" stylesheets="@Landing.css" text="Players" textFill="WHITE">
+                        <JFXButton accessibleRole="PARENT" layoutX="623.0" layoutY="19.0" onAction="#goToPlayers" prefHeight="32.0" prefWidth="120.0" styleClass="d" stylesheets="@Landing.css" text="Players" textFill="WHITE" AnchorPane.leftAnchor="600.0" AnchorPane.rightAnchor="300.0">
                             <graphic>
                                 <FontAwesomeIcon fill="#bbe0e0" glyphName="MALE" size="1.5em" />
                             </graphic>
                      <font>
                         <Font size="16.0" />
-                     </font></JFXButton>
-                        <JFXButton layoutX="764.0" layoutY="19.0" onAction="#goToCoaches" prefHeight="32.0" prefWidth="120.0" styleClass="d" stylesheets="@Landing.css" text="Coaches" textFill="WHITE">
+                     </font>
+                  </JFXButton>
+                        <JFXButton accessibleRole="PARENT" layoutX="764.0" layoutY="19.0" onAction="#goToCoaches" prefHeight="32.0" prefWidth="120.0" styleClass="d" stylesheets="@Landing.css" text="Coaches" textFill="WHITE" AnchorPane.leftAnchor="700.0" AnchorPane.rightAnchor="100.0">
                             <graphic>
 
                             </graphic>
@@ -30,27 +42,30 @@
                      </graphic>
                      <font>
                         <Font size="16.0" />
-                     </font></JFXButton>
-                        <JFXButton buttonType="RAISED" layoutX="503.0" layoutY="19.0" onAction="#goToTeams" prefHeight="32.0" prefWidth="120.0" styleClass="d" stylesheets="@Landing.css" text="Teams" textAlignment="CENTER" textFill="WHITE">
+                     </font>
+                  </JFXButton>
+                        <JFXButton accessibleRole="PARENT" layoutX="503.0" layoutY="19.0" onAction="#goToTeams" prefHeight="32.0" prefWidth="120.0" styleClass="d" stylesheets="@Landing.css" text="Teams" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="500.0" AnchorPane.rightAnchor="500.0">
                             <graphic>
                                 <FontAwesomeIcon fill="#bbe0e0" fontSmoothingType="LCD" glyphName="GROUP" size="1.5em" />
                             </graphic>
                      <font>
                         <Font size="16.0" />
-                     </font></JFXButton>
-                        <JFXButton layoutX="375.0" layoutY="18.0" onAction="#goToLeagues" prefHeight="32.0" prefWidth="120.0" styleClass="d" stylesheets="@Landing.css" text="Leagues" textFill="WHITE">
+                     </font>
+                  </JFXButton>
+                        <JFXButton accessibleRole="PARENT" alignment="CENTER" layoutX="375.0" layoutY="18.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#goToLeagues" prefHeight="32.0" prefWidth="120.0" styleClass="d" stylesheets="@Landing.css" text="Leagues" textFill="WHITE" AnchorPane.leftAnchor="375.0" AnchorPane.rightAnchor="681.0">
                             <graphic>
                                 <FontAwesomeIcon fill="#bbe0e0" glyphName="FUTBOL_ALT" size="1.5em" />
                             </graphic>
                      <font>
                         <Font size="16.0" />
-                     </font></JFXButton>
-                  <JFXButton fx:id="mainLabel" layoutX="73.0" layoutY="18.0" onAction="#goToLanding" prefHeight="38.0" prefWidth="214.0" text="SOCCER SYSTEM " textFill="#bbe0e0">
+                     </font>
+                  </JFXButton>
+                  <JFXButton fx:id="mainLabel" accessibleRole="PARENT" layoutX="73.0" layoutY="18.0" onAction="#goToLanding" prefHeight="38.0" prefWidth="214.0" text="SOCCER SYSTEM " textFill="#bbe0e0" AnchorPane.leftAnchor="100.0">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </JFXButton>
-                  <JFXButton layoutX="909.0" layoutY="19.0" onAction="#goToLogin" prefHeight="32.0" prefWidth="120.0" styleClass="d" stylesheets="@Landing.css" text="LogIn" textFill="WHITE">
+                  <JFXButton accessibleRole="PARENT" layoutX="909.0" layoutY="19.0" onAction="#goToLogin" prefHeight="32.0" prefWidth="120.0" styleClass="d" stylesheets="@Landing.css" text="LogIn" textFill="WHITE" AnchorPane.rightAnchor="150.0">
                      <graphic>
                         <FontAwesomeIcon fill="#bbe0e0" glyphName="USER" size="1.5em" />
                      </graphic>
@@ -58,7 +73,7 @@
                         <Font name="System Bold" size="16.0" />
                      </font>
                   </JFXButton>
-                  <JFXButton id="d" layoutX="1040.0" layoutY="19.0" onAction="#goToSignUp" prefHeight="32.0" prefWidth="120.0" styleClass="d" stylesheets="@Landing.css" text="SignUp" textFill="WHITE">
+                  <JFXButton id="d" accessibleRole="PARENT" layoutX="1040.0" layoutY="19.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#goToSignUp" prefHeight="32.0" prefWidth="120.0" styleClass="d" stylesheets="@Landing.css" text="SignUp" textFill="WHITE" AnchorPane.rightAnchor="16.0">
                      <graphic>
                         <FontAwesomeIcon fill="#bbe0e0" glyphName="USER_PLUS" size="1.5em" />
                      </graphic>
@@ -66,7 +81,7 @@
                         <Font name="System Bold" size="16.0" />
                      </font>
                   </JFXButton>
-                  <JFXButton layoutX="248.0" layoutY="18.0" onAction="#openMyApps" prefHeight="32.0" prefWidth="120.0" style="-fx-background-color: #66c2ff;" stylesheets="@Landing.css" text="MY APPS" visible="false">
+                  <JFXButton layoutX="248.0" layoutY="18.0" onAction="#openMyApps" prefHeight="32.0" prefWidth="120.0" style="-fx-background-color: #66c2ff;" stylesheets="@Landing.css" text="MY APPS" visible="false" AnchorPane.leftAnchor="260.0">
                      <graphic>
                         <FontAwesomeIcon glyphName="STREET_VIEW" size="1.5em" />
                      </graphic>
@@ -74,7 +89,7 @@
                         <Font name="System Bold" size="16.0" />
                      </font>
                   </JFXButton>
-                  <JFXButton layoutX="893.0" layoutY="19.0" prefHeight="32.0" prefWidth="120.0" styleClass="d" stylesheets="@Landing.css" text="Omerh" textFill="WHITE" visible="false">
+                  <JFXButton layoutX="893.0" layoutY="19.0" prefHeight="32.0" prefWidth="120.0" styleClass="d" stylesheets="@Landing.css" text="Omerh" textFill="WHITE" visible="false" AnchorPane.rightAnchor="150.0">
                      <graphic>
                         <FontAwesomeIcon fill="#bbe0e0" glyphName="USER" size="1.5em" />
                      </graphic>
@@ -82,7 +97,7 @@
                         <Font name="System Bold" size="16.0" />
                      </font>
                   </JFXButton>
-                  <JFXButton layoutX="1013.0" layoutY="19.0" prefHeight="38.0" prefWidth="150.0" styleClass="d" stylesheets="@Landing.css" text="Notifications" textFill="WHITE" visible="false">
+                  <JFXButton layoutX="1013.0" layoutY="19.0" prefHeight="38.0" prefWidth="150.0" styleClass="d" stylesheets="@Landing.css" text="Notifications" textFill="WHITE" visible="false" AnchorPane.rightAnchor="16.0">
                      <graphic>
                         <FontAwesomeIcon fill="#bbe0e0" glyphName="BELL" size="1.5em" />
                      </graphic>
@@ -90,20 +105,39 @@
                         <Font name="System Bold" size="16.0" />
                      </font>
                   </JFXButton>
-                  <ImageView fitHeight="77.0" fitWidth="112.0" layoutX="14.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView accessibleRole="PARENT" fitHeight="77.0" fitWidth="112.0" layoutX="14.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="14.0">
                      <image>
                         <Image url="@soccerLogo.png" />
                      </image>
                   </ImageView>
-                    </children></AnchorPane>
-            </top>
+                    </children>
+            </AnchorPane>
+         </top>
+         <bottom>
+            <AnchorPane prefHeight="97.0" prefWidth="1176.0" style="-fx-background-color: #160604;" BorderPane.alignment="CENTER">
+               <children>
+                  <FontAwesomeIcon fill="#bbe0e0" glyphName="COPYRIGHT" layoutX="109.0" layoutY="65.0" size="4em" />
+                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="167.0" layoutY="35.0" text="All right resreved to team #7 - Yiftah Szoke, Tali Schvartz, Ido Kestenbaum ,Omer Hofman, Roi Katz " textFill="#bbe0e0">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
+         </bottom>
          <center>
-            <ImageView fitHeight="735.0" fitWidth="1079.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+            <ImageView accessibleRole="PARENT" fitHeight="615.0" fitWidth="1181.0" pickOnBounds="true" styleClass="img" BorderPane.alignment="CENTER">
                <image>
                   <Image url="@SoccerWallpaper.jpg" />
                </image>
             </ImageView>
          </center>
+         <left>
+            <VBox prefHeight="626.0" prefWidth="0.0" BorderPane.alignment="CENTER" />
+         </left>
+         <right>
+            <VBox prefHeight="626.0" prefWidth="0.0" BorderPane.alignment="CENTER" />
+         </right>
         </BorderPane>
-    </children>
-</AnchorPane>
+   </children>
+</GridPane>
