--- a/src/main/resources/Views/Landing.fxml
+++ b/src/main/resources/Views/Landing.fxml
@@ -21,11 +21,11 @@
       <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
    </rowConstraints>
    <children>
-        <BorderPane prefHeight="800.0" prefWidth="1176.0" style="-fx-background-color: #bbe0e0;" GridPane.hgrow="ALWAYS">
-         <top>
-                <AnchorPane prefHeight="87.0" prefWidth="1182.0" style="-fx-background-color: #160604;" BorderPane.alignment="CENTER">
+        <BorderPane prefHeight="800" prefWidth="1200" style="-fx-background-color: #bbe0e0;" GridPane.hgrow="ALWAYS">
+            <top>
+                <AnchorPane style="-fx-background-color: #160604;" BorderPane.alignment="CENTER">
                     <children>
-                        <JFXButton accessibleRole="PARENT" layoutX="623.0" layoutY="19.0" onAction="#goToPlayers" prefHeight="32.0" prefWidth="120.0" styleClass="d" stylesheets="@Landing.css" text="Players" textFill="WHITE" AnchorPane.leftAnchor="600.0" AnchorPane.rightAnchor="300.0">
+                        <JFXButton accessibleRole="PARENT" layoutX="646.0" layoutY="19.0" onAction="#goToPlayers" prefHeight="34.0" prefWidth="95.0" styleClass="d" stylesheets="@Landing.css" text="Players" textFill="WHITE" AnchorPane.leftAnchor="650.0">
                             <graphic>
                                 <FontAwesomeIcon fill="#bbe0e0" glyphName="MALE" size="1.5em" />
                             </graphic>
@@ -33,7 +33,7 @@
                         <Font size="16.0" />
                      </font>
                   </JFXButton>
-                        <JFXButton accessibleRole="PARENT" layoutX="764.0" layoutY="19.0" onAction="#goToCoaches" prefHeight="32.0" prefWidth="120.0" styleClass="d" stylesheets="@Landing.css" text="Coaches" textFill="WHITE" AnchorPane.leftAnchor="700.0" AnchorPane.rightAnchor="100.0">
+                        <JFXButton accessibleRole="PARENT" layoutX="773.0" layoutY="19.0" onAction="#goToCoaches" prefHeight="38.0" prefWidth="113.0" styleClass="d" stylesheets="@Landing.css" text="Coaches" textFill="WHITE" AnchorPane.leftAnchor="775.0">
                             <graphic>
 
                             </graphic>
@@ -44,7 +44,7 @@
                         <Font size="16.0" />
                      </font>
                   </JFXButton>
-                        <JFXButton accessibleRole="PARENT" layoutX="503.0" layoutY="19.0" onAction="#goToTeams" prefHeight="32.0" prefWidth="120.0" styleClass="d" stylesheets="@Landing.css" text="Teams" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="500.0" AnchorPane.rightAnchor="500.0">
+                        <JFXButton accessibleRole="PARENT" layoutX="516.0" layoutY="18.0" onAction="#goToTeams" prefHeight="28.0" prefWidth="113.0" styleClass="d" stylesheets="@Landing.css" text="Teams" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="500.0">
                             <graphic>
                                 <FontAwesomeIcon fill="#bbe0e0" fontSmoothingType="LCD" glyphName="GROUP" size="1.5em" />
                             </graphic>
@@ -52,7 +52,7 @@
                         <Font size="16.0" />
                      </font>
                   </JFXButton>
-                        <JFXButton accessibleRole="PARENT" alignment="CENTER" layoutX="375.0" layoutY="18.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#goToLeagues" prefHeight="32.0" prefWidth="120.0" styleClass="d" stylesheets="@Landing.css" text="Leagues" textFill="WHITE" AnchorPane.leftAnchor="375.0" AnchorPane.rightAnchor="681.0">
+                        <JFXButton accessibleRole="PARENT" alignment="CENTER" layoutX="375.0" layoutY="18.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#goToLeagues" prefHeight="38.0" prefWidth="108.0" styleClass="d" stylesheets="@Landing.css" text="Leagues" textFill="WHITE" AnchorPane.leftAnchor="375.0">
                             <graphic>
                                 <FontAwesomeIcon fill="#bbe0e0" glyphName="FUTBOL_ALT" size="1.5em" />
                             </graphic>
@@ -60,7 +60,7 @@
                         <Font size="16.0" />
                      </font>
                   </JFXButton>
-                  <JFXButton fx:id="mainLabel" accessibleRole="PARENT" layoutX="73.0" layoutY="18.0" onAction="#goToLanding" prefHeight="38.0" prefWidth="214.0" text="SOCCER SYSTEM " textFill="#bbe0e0" AnchorPane.leftAnchor="100.0">
+                  <JFXButton fx:id="mainLabel" accessibleRole="PARENT" layoutX="97.0" layoutY="18.0" onAction="#goToLanding" prefHeight="38.0" prefWidth="214.0" text="SOCCER SYSTEM " textFill="#bbe0e0" AnchorPane.leftAnchor="97.0">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
@@ -117,7 +117,7 @@
             <AnchorPane prefHeight="97.0" prefWidth="1176.0" style="-fx-background-color: #160604;" BorderPane.alignment="CENTER">
                <children>
                   <FontAwesomeIcon fill="#bbe0e0" glyphName="COPYRIGHT" layoutX="109.0" layoutY="65.0" size="4em" />
-                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="167.0" layoutY="35.0" text="All right resreved to team #7 - Yiftah Szoke, Tali Schvartz, Ido Kestenbaum ,Omer Hofman, Roi Katz " textFill="#bbe0e0">
+                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="167.0" layoutY="35.0" text="All right resreved to Team #7 - Yiftah Szoke, Tali Schvartz, Ido Kestenbaum, Omer Hofman and Roi Katz " textFill="#bbe0e0">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -126,7 +126,7 @@
             </AnchorPane>
          </bottom>
          <center>
-            <ImageView accessibleRole="PARENT" fitHeight="615.0" fitWidth="1181.0" pickOnBounds="true" styleClass="img" BorderPane.alignment="CENTER">
+            <ImageView accessibleRole="PARENT" fitHeight="778.0" fitWidth="1893.0" pickOnBounds="true" styleClass="img">
                <image>
                   <Image url="@SoccerWallpaper.jpg" />
                </image>
