--- a/src/main/resources/Views/Landing.fxml
+++ b/src/main/resources/Views/Landing.fxml
@@ -89,7 +89,7 @@
                         <Font name="System Bold" size="16.0" />
                      </font>
                   </JFXButton>
-                  <JFXButton layoutX="893.0" layoutY="19.0" prefHeight="32.0" prefWidth="120.0" styleClass="d" stylesheets="@Landing.css" text="Omerh" textFill="WHITE" visible="false" AnchorPane.rightAnchor="150.0">
+                  <JFXButton layoutX="1476.0" layoutY="18.0" onAction="#goToProfile" prefHeight="32.0" prefWidth="120.0" styleClass="d" stylesheets="@Landing.css" text="Omerh" textFill="WHITE" AnchorPane.rightAnchor="297.5999999999999">
                      <graphic>
                         <FontAwesomeIcon fill="#bbe0e0" glyphName="USER" size="1.5em" />
                      </graphic>
