--- a/src/main/resources/Views/MyApp.fxml
+++ b/src/main/resources/Views/MyApp.fxml
@@ -13,10 +13,9 @@
             <Font name="System Bold" size="35.0" />
          </font>
       </Text>
-      <Button fx:id="initNewSeasonButton" layoutX="398.0" layoutY="339.0" mnemonicParsing="false" onAction="#openAddSeason" prefHeight="47.0" prefWidth="143.0" text="add league" />
-      <Button fx:id="openNewTeamButton" layoutX="516.0" layoutY="219.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="143.0" text="open new team" />
-      <Button fx:id="createNewTeamButton" layoutX="759.0" layoutY="217.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="143.0" text="create new team" />
-      <Button fx:id="initNewSeasonButton1" layoutX="265.0" layoutY="219.0" mnemonicParsing="false" onAction="#openAddSeason" prefHeight="47.0" prefWidth="143.0" text="init new season" />
+      <Button fx:id="createNewTeamButton" layoutX="759.0" layoutY="217.0" mnemonicParsing="false" prefHeight="47.0" prefWidth="143.0" text="create new team" visible="false"/>
+      <Button fx:id="initNewSeasonButton" layoutX="265.0" layoutY="219.0" mnemonicParsing="false" onAction="#openAddSeason" prefHeight="47.0" prefWidth="143.0" text="init new season" visible="false"/>
+      <Button fx:id="mpProfileButton" layoutX="514.0" layoutY="351.0" mnemonicParsing="false" onAction="#goToProfile" prefHeight="47.0" prefWidth="143.0" text="my profile" />
     </children>
 
 </AnchorPane>
