--- a/src/main/resources/Views/Players.fxml
+++ b/src/main/resources/Views/Players.fxml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
 <?import com.jfoenix.controls.JFXButton?>
-<AnchorPane prefHeight="800.0" prefWidth="1176.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UILayer.Controllers.PlayersController">
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+
+<AnchorPane prefHeight="600.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="UILayer.Controllers.PlayersController">
     <children>
         <fx:include fx:id="navBar" source="Landing.fxml" />
-        <JFXButton layoutX="387.0" layoutY="244.0" ripplerFill="#dc6464" stylesheets="@Landing.css" text="THIS IS Players" />
+        <JFXButton layoutX="385.0" layoutY="119.0" ripplerFill="#dc6464" stylesheets="@Landing.css" text=" Players" />
+      <TableView fx:id="players_table" layoutX="145.0" layoutY="192.0" prefHeight="269.0" prefWidth="365.0">
+        <columns>
+          <TableColumn id="table1" prefWidth="75.0" text="Player" />
+          <TableColumn prefWidth="75.0" text="C2" />
+        </columns>
+      </TableView>
     </children>
 
 </AnchorPane>
